<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp"
        android:orientation="vertical">

        <com.ghstudios.android.components.TitleBarCell
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:iconSrc="@drawable/drawer_quests"
            tools:titleText="Some Quest"/>

        <FrameLayout style="@style/SectionDivider"/>

        <TextView
            android:id="@+id/goal"
            style="@style/Description"
            tools:text="Hunt a Lagiacrus" />

        <FrameLayout style="@style/SectionDivider">

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.flexbox.FlexboxLayout
                style="@style/cell_column_row"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:alignItems="center"
                app:justifyContent="space_around">

                <TextView
                    android:id="@+id/hub"
                    style="@style/cell_column_label"
                    tools:text="Village" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/level"
                        style="@style/cell_column_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="6" />

                    <ImageView
                        style="@style/tiny_image"
                        android:src="@drawable/impact"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </LinearLayout>

            </com.google.android.flexbox.FlexboxLayout>

            <FrameLayout style="@style/SectionDivider">

            </FrameLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/data_row"
                style="@style/cell_column_row"
                app:justifyContent="space_between">

                <com.ghstudios.android.components.ColumnLabelTextCell
                    android:id="@+id/reward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:labelText="@string/quest_detail_reward"
                    tools:valueText="45000z">

                </com.ghstudios.android.components.ColumnLabelTextCell>

                <com.ghstudios.android.components.ColumnLabelTextCell
                    android:id="@+id/hrp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:labelText="@string/quest_detail_hrp"
                    app:layout_constraintEnd_toStartOf="@+id/fee"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/reward"
                    tools:valueText="300" />

                <com.ghstudios.android.components.ColumnLabelTextCell
                    android:id="@+id/fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:labelText="@string/quest_detail_fee"
                    tools:valueText="5000z" />
            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

        <FrameLayout style="@style/SectionDivider"/>

        <!-- Monster List -->
        <TextView
            style="@style/text_small_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:text="@string/title_monsters" />

        <LinearLayout
            android:id="@+id/monster_habitat_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:background="@color/rare_1"
            tools:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:orientation="vertical">

            <!-- Location -->
            <TextView
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_location" />

            <LinearLayout
                android:id="@+id/location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/location_image"
                    style="@style/main_image_large"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="left"
                    tools:src="@drawable/switch_axe1" />

                <TextView
                    android:id="@+id/location"
                    style="@style/detail_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    tools:text="Misty Peaks (N)" />
            </LinearLayout>

            <!-- Subquest -->
            <TextView
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_detail_subquest_a" />

            <TextView
                android:id="@+id/subquest_a"
                style="@style/detail_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Mount and topple monster twice." />

            <!-- Sub Reward -->
            <TextView
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_detail_subquest_reward_a" />

            <TextView
                android:id="@+id/subreward_a"
                style="@style/detail_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="900z" />

            <!-- Sub HRP -->
            <TextView
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_detail_subquest_hrp_a" />

            <TextView
                android:id="@+id/subhrp_a"
                style="@style/detail_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="30" />


            <!-- Subquest B -->
            <TextView
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_detail_subquest_b" />

            <TextView
                android:id="@+id/subquest_b"
                style="@style/detail_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Mount and topple monster twice." />

            <!-- Sub Reward -->
            <TextView
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_detail_subquest_reward_b" />

            <TextView
                android:id="@+id/subreward_b"
                style="@style/detail_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="900z" />

            <!-- Sub HRP -->
            <TextView
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_detail_subquest_hrp_b" />

            <TextView
                android:id="@+id/subhrp_b"
                style="@style/detail_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="30" />


            <!-- Hirer -->
            <TextView
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_detail_hirer" />

            <TextView
                android:id="@+id/hirer"
                style="@style/text_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/weapon_property_color"
                tools:text="Hirer." />

            <!-- Description -->
            <TextView
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_detail_description" />

            <TextView
                android:id="@+id/description"
                style="@style/text_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/weapon_property_color"
                tools:text="Quest description." />
        </LinearLayout>
    </LinearLayout>
</ScrollView>