<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.ghstudios.android.components.TitleBarCell
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:iconSrc="@drawable/drawer_armor"
            tools:titleText="Attack Jewel 3"/>

        <FrameLayout
            android:id="@+id/divider1"
            style="@style/SectionDivider"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/data_row"
            style="@style/cell_column_row">

            <com.ghstudios.android.components.ColumnLabelTextCell
                android:id="@+id/part"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:labelText="@string/armor_part"
                tools:valueText="Legs" />

            <include layout="@layout/view_column_slots"/>

            <com.ghstudios.android.components.ColumnLabelTextCell
                android:id="@+id/defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:labelText="@string/equipment_defense"
                tools:valueText="5~50" />
        </com.google.android.flexbox.FlexboxLayout>

        <FrameLayout
            android:id="@+id/divider2"
            style="@style/SectionDivider" />

        <include layout="@layout/fragment_armor_resists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"/>

        <LinearLayout
            android:id="@+id/skill_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.ghstudios.android.components.SectionHeaderCell
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/skills" />

            <LinearLayout
                android:id="@+id/skill_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="@drawable/divider_solid"
                android:showDividers="middle">

                <com.ghstudios.android.components.IconLabelTextCell
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:labelText="Attack"
                    app:valueText="1"
                    tools:visibility="visible" />

                <com.ghstudios.android.components.IconLabelTextCell
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:labelText="Defense"
                    app:valueText="-1"
                    tools:visibility="visible" />
            </LinearLayout>
        </LinearLayout>


        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/recipe_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/item_crafting"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/improve_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="Improve"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/improve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/improve2_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="Improve 2"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/improve2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/improve3_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="Improve 3"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/improve3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/improve4_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="Improve 4"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/improve4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/improve5_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="Improve 5"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/improve5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/improve6_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="Improve 6"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/improve6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/improve7_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="Improve 7"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/improve7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/improve8_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="Improve 8"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/improve8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/upgrade_to_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="Upgrades To"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/upgrade_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/upgrade_from_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="Upgrades From"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/upgrade_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button android:id="@+id/select_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/asb_action_select"
            android:visibility="gone"
            tools:visibility="visible"
            android:elevation="3dp"
            android:clickable="true"/>

    </LinearLayout>
</ScrollView>